--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
+
+.App{
+  font-family: 'Oswald'
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.searchForm{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  color:aliceblue
+}
+
+
+.product {
+  display: flex;
+  cursor: pointer;
+  align-items: flex-start;
+  justify-content:flex-start;
+  padding-bottom: 30px;
+  margin-right: 50px;
+}
+
+.product-thumbnail{ 
+    border-radius:10px;
+    width: 70px;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 20px;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+  }
+
+
+.searchBar{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 25px;
+  margin: 0px 15%;
+  border: none; /* <-- This thing here */
+  border:solid 1px #ccc;
+  border-radius: 7px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 5%;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
 
-.App-link {
-  color: #61dafb;
+.productList{
+  display:block;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-top: 50px;
+  margin: 30px 10%;
+  border-style: solid;
+  border-radius: 7px;
+  border-width: 1px;
+  border-color: rgb(173, 173, 173);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-details{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  padding-right: 5px;
+  padding-left: 10px;
 }
+
+.product-price{
+
+  opacity: 70%;
+  font-size: small;
+}
+.product-brand{
+
+  font-size: 12px;
+  color:rgb(126, 13, 13)
+}
+
+.wishlist-btn{
+
+  display:flex;
+  padding: 2px;
+  border-radius: 7px;
+  border-color: black;
+  border: width 1px;
+  color:rgb(255, 255, 255);
+  background-color:black;
+  padding: 5px;
+  margin-top: 7px;
+  width: 100px;
+  justify-content:space-between;
+  cursor: pointer;
+}
+
+::placeholder{
+  font-family: 'Oswald';
+  color: rgb(0, 0, 0);
+  opacity: 50%;
+}
+
+.login-container{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.login-btn{
+  align-items: center;
+  display:flex;
+  padding: 2px;
+  border-radius: 7px;
+  border-color: black;
+  border: width 1px;
+  color:rgb(255, 255, 255);
+  background-color:rgb(0, 0, 0);
+  padding: 5px;
+  margin-top: 20px;
+  width: 300px;
+  justify-content:center;
+  align-items: center;
+  cursor: pointer;
+
+}
+
+
+
+
